<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="139.75dp"
        android:layout_height="130dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/splash_logo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"/>

    <TextView
        android:id="@+id/login_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/login_hint"
        android:text="@string/login_hint"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="17dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit"
        android:backgroundTint="@color/Grey"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:padding="17dp"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_prompt" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="17dp"
        android:autofillHints="textPassword"
        android:background="@drawable/edit"
        android:backgroundTint="@color/Grey"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:padding="17dp"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="17dp"
        android:text="@string/forget_text"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/tab_bkg"
        android:text="@string/login_button_text"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:text="@string/sing_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:text="@string/sup"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.738"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
