<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".singup"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/arrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="80dp"
        app:drawableLeftCompat="@drawable/arrow"
        android:layout_marginStart="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/create_your_acoount"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
       android:layout_marginStart="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrow" />

    <EditText
        android:id="@+id/Fullname"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:autofillHints="name"
        android:background="@drawable/edit"
        android:backgroundTint="@color/Grey"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="17dp"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        android:layout_marginStart="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account" />

    <EditText
        android:id="@+id/Address"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:background="@drawable/edit"
        android:backgroundTint="@color/Grey"
        android:hint="@string/address_text"
        android:inputType="text"
        android:padding="17dp"
        android:textColorHint="@color/black"
        android:textSize="14sp"
       android:layout_marginStart="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Fullname" />

    <EditText
        android:id="@+id/Contact"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:background="@drawable/edit"
        android:backgroundTint="@color/Grey"
        android:hint="@string/contact_text"
        android:inputType="text"
        android:padding="17dp"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        android:layout_marginStart="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Address" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:background="@drawable/edit"
        android:backgroundTint="@color/Grey"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:padding="17dp"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        android:layout_marginStart="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Contact" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:background="@drawable/edit"
        android:backgroundTint="@color/Grey"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:padding="17dp"
        android:textColorHint="@color/black"
        android:textSize="14sp"
       android:layout_marginStart="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <EditText
        android:id="@+id/ConfirmPassword"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:background="@drawable/edit"
        android:backgroundTint="@color/Grey"
        android:hint="@string/confirm_text"
        android:inputType="textPassword"
        android:padding="17dp"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        android:layout_marginStart="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/tab_bkg"
        android:text="@string/sup"
        android:textColor="@color/white"
        android:textStyle="bold"
       android:layout_marginStart="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>