<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editprofile"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:background="@drawable/edit"
        android:drawableLeft="@drawable/arrow"
        android:drawablePadding="50dp"
        android:padding="44dp"
        android:paddingStart="45dp"
        android:text="Edit Profile"
        android:textColorHint="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:text="SAVE"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="19dp"/>

    <TextView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        android:drawableLeft="@drawable/profile2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:autofillHints="name"
        android:background="@drawable/edit"
        android:backgroundTint="@color/Grey"
        android:hint="Name"
        android:inputType="textPersonName"
        android:padding="17dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"/>

    <EditText
        android:id="@+id/Contact"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:autofillHints="name"
        android:background="@drawable/edit"
        android:backgroundTint="@color/Grey"
        android:hint="@string/contact_text"
        android:inputType="text"
        android:padding="17dp"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:background="@drawable/edit"
        android:backgroundTint="@color/Grey"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:padding="17dp"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Contact" />

    <EditText
        android:id="@+id/Address"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:background="@drawable/edit"
        android:backgroundTint="@color/Grey"
        android:hint="@string/address_text"
        android:inputType="text"
        android:padding="17dp"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />



</androidx.constraintlayout.widget.ConstraintLayout>